# youtube-thumbnails-collection

./: .gitignore  README.md
.github/workflows/: ci.yml  daily_collect.yml
libs/youtube_collector/: README.md  pyproject.toml
libs/youtube_collector/src/youtube_collector/: __init__.py  client.py  config.py
libs/youtube_collector/tests/: test_client.py
scripts/: collect_daily.py  collect_daily_test.py  pipeline_collect_daily.py  pipeline_rotate_batch.py  reset_dataset.sh  test_collect_daily.py  util_reset_dataset.sh
