[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-collector"
version = "0.1.0"
description = "A library for collecting video data from YouTube."
readme = "README.md"
authors = [{name = "Daniele Acquaviva", email = "danieleacquaviva96@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["youtube", "data collection", "video", "thumbnails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "google-api-python-client>=2.0.0",
    "requests>=2.25.1",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/danieleacquaviva/youtube-thumbnails"
Repository = "https://github.com/danieleacquaviva/youtube-thumbnails"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
youtube_collector = ["py.typed"]